--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # Node.js dependencies
-/node_modules/
+node_modules/
 .pnp/
 .pnp.*
 .yarn/*
@@ -10,21 +10,15 @@
 !.yarn/releases
 !.yarn/versions
 
-# Testing
-/coverage/
-
-# Next.js build output
-/.next/
+# Build output
+.next/
 out/
+build/
 
-# Production build
-/build/
+# Test coverage
+coverage/
 
-# Miscellaneous
-.DS_Store
-*.pem
-
-# Debug logs
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -42,13 +36,17 @@ pnpm-debug.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# IDE files
+# IDE/editor files
 .vscode/
 .idea/
 *.sublime-workspace
 *.sublime-project
 
 # OS files
+.DS_Store
 Thumbs.db
 ehthumbs.db
 Icon?
+
+# Miscellaneous
+*.pem
